# grommunio-index

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.rst  changelog.rst  grommunio-index-run.sh  grommunio-index.8  grommunio-index.cpp  grommunio-index.cron  grommunio-index.service  grommunio-index.timer  system-user-groindex.conf
doc/: changelog.rst
